<resources>
    <string name="app_name">QuizApp</string>
    <string name="icon">icon</string>
    <string name="accounts">accounts</string>
    <string name="play">play button</string>
    <string name="exit">Exit</string>
    <string name="label1">Ready to test your knowledge?</string>
    <string name="label2">How far can you get everything right?</string>
    <string name="category">Choose Category</string>
    <string name="difficulty">choose difficulty</string>
    <string name="easy">Easy</string>
    <string name="intermediate">Intermediate</string>
    <string name="hard">hard</string>
    <string name="question1">A tsunami is a</string>
    <string name="geography">Geography</string>
    <string name="history">history</string>
    <string name="sports">sports</string>
    <string name="music">music</string>
    <string name="science">science</string>
    <string name="home">Home</string>
</resources>