<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B2EBF2"
    android:backgroundTint="#B2EBF2"
    android:backgroundTintMode="multiply"
    tools:context=".Difficulty">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/difficulty"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#FAFAFA"
        android:textSize="48sp"
        android:typeface="serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.073" />

    <Button
        android:id="@+id/easy"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#2AA516"
        android:fontFamily="sans-serif-medium"
        android:text="@string/easy"
        android:textAlignment="center"
        android:textSize="24sp"
        android:typeface="sans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button2"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#2C43A6"
        android:fontFamily="sans-serif-medium"
        android:text="@string/intermediate"
        android:textAlignment="center"
        android:textSize="24sp"
        android:typeface="sans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/easy"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button3"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#AA3939"
        android:fontFamily="sans-serif-medium"
        android:text="@string/hard"
        android:textAlignment="center"
        android:textSize="24sp"
        android:typeface="sans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/revert"
        style="@android:style/Widget.Material.Light.ImageButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:adjustViewBounds="false"
        android:background="@drawable/round_corners"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.955"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.973"
        app:srcCompat="@android:drawable/ic_menu_revert" />

</androidx.constraintlayout.widget.ConstraintLayout>